# stamina-server

./: .gitignore  Dockerfile  QueryMap.java  README.md  StaminaQuery.java  build.gradle  introduction.md  pyproject.toml  requirements.txt
.github/workflows/: main_staminamodelchecker.yml
src/: .gitignore  Dockerfile  Job.py  StaminaController.java  StaminaQueries.java  StaminaQueryMap.java  app.py  log.py  settings.py  web.py
src/stamina_API/: Job.py  __init__.py  admin.py  app.py  data.py  init_db.py  log.py  schema.sql  settings.py  web.py
src/stamina_API/templates/: admin.html  base.html  error.html  index.html  login.html  response.html
test/: test.py
